# noti-sdk-py

./: .gitignore  CHANGELOG.md  PUBLISH.md  PUBLISH_STEPS.md  QUICK_START.md  README.md  TESTING.md  pyproject.toml  run_example.sh  setup.py
examples/: README.md  list_sessions.py  send_text.py
noti_sdk_py/: __init__.py
noti_sdk_py/api/endpoints/: __init__.py  chats.py
