[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noti-sdk-py"
version = "1.0.0"
description = "Official Python SDK for NotiBuzz. A simple and powerful client for sending WhatsApp messages, managing media, and interacting with NotiBuzz APIs from any Python application or backend service."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Diego Quiroz Ramirez - CEO NotiBuzz Cloud"}
]
keywords = [
    "notibuzz",
    "sdk",
    "whatsapp",
    "messaging",
    "api",
    "python",
    "notibuzz-cloud",
    "masive-messaging",
    "bulk-messaging",
    "async-messaging",
    "campaign-control",
    "session-control",
    "chat-control",
    "contact-control",
    "message-control",
    "status-control"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/notibuzzcloud/noti-sdk-py"
Documentation = "https://github.com/notibuzzcloud/noti-sdk-py#readme"
Repository = "https://github.com/notibuzzcloud/noti-sdk-py.git"
"Bug Tracker" = "https://github.com/notibuzzcloud/noti-sdk-py/issues"

[tool.setuptools]
packages = ["noti_sdk_py", "noti_sdk_py.api", "noti_sdk_py.api.endpoints", "noti_sdk_py.utils"]

[tool.setuptools.package-data]
"*" = ["*.md", "LICENSE"]

